--- a/src/SdtdServerKit/appsettings.json
+++ b/src/SdtdServerKit/appsettings.json
@@ -1,7 +1,7 @@
 {
   "WebUrl": "http://*:8888",
   "WebSocketPort": 8889,
-  "WebSocketUrl": "ws://{hostname}:8889",
+  "WebSocketUrl": "ws://{hostname}:8889/ws",
   "UserName": "admin",
   "Password": "123456",
   "AccessTokenExpireTime": 7200
