添加数据库模块

--- a/src/SdtdServerKit/appsettings.json
+++ b/src/SdtdServerKit/appsettings.json
@@ -4,5 +4,6 @@
   "WebSocketUrl": "ws://{hostname}:8889/ws",
   "UserName": "admin",
   "Password": "123456",
-  "AccessTokenExpireTime": 7200
+  "AccessTokenExpireTime": 7200,
+  "DatabasePath": "./data/database.db"
 }
