--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -35,13 +35,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Autofac.WebApi2.Owin" Version="6.2.1" />
 	  <PackageReference Include="DeviceId" Version="6.6.0" />
 	  <PackageReference Include="IceCoffee.Common" Version="1.0.10" />
+	  <PackageReference Include="IceCoffee.SimpleCRUD" Version="1.3.5" />
 	  <PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.3.0" />
+	  <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.2.2" />
 	  <PackageReference Include="Microsoft.Owin.StaticFiles" Version="4.2.2" />
 	  <PackageReference Include="NSwag.AspNet.Owin" Version="14.0.7" />
 	  <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
+	  <PackageReference Include="System.Text.Encodings.Web" Version="8.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -52,14 +56,20 @@
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	  <None Update="restart-linux.sh">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
 	  <None Update="restart-windows.bat">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  </None>
-	</ItemGroup>
-	
-	<ItemGroup>
+	  <None Update="sql\*">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Include="settings\*">
+		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+  </ItemGroup>
+
+  <ItemGroup>
 		<Reference Include="Microsoft.CSharp">
 			<Private>true</Private>
 			<HintPath>$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\Microsoft.CSharp.dll</HintPath>
