添加公告、积分、传送等功能

--- a/src/SdtdServerKit/appsettings.json
+++ b/src/SdtdServerKit/appsettings.json
@@ -5,5 +5,5 @@
   "UserName": "admin",
   "Password": "123456",
   "AccessTokenExpireTime": 7200,
-  "DatabasePath": "./data/database.db"
+  "DatabasePath": "./Data/database.db"
 }
