--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -37,12 +37,13 @@
 	<ItemGroup>
 	  <PackageReference Include="Autofac.WebApi2.Owin" Version="6.2.1" />
 	  <PackageReference Include="DeviceId" Version="6.6.0" />
-	  <PackageReference Include="IceCoffee.Common" Version="1.0.10" />
+	  <PackageReference Include="IceCoffee.Common" Version="1.0.11" />
 	  <PackageReference Include="IceCoffee.SimpleCRUD" Version="1.3.5" />
 	  <PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.3.0" />
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.4" />
 	  <PackageReference Include="Microsoft.Owin.Security.OAuth" Version="4.2.2" />
 	  <PackageReference Include="Microsoft.Owin.StaticFiles" Version="4.2.2" />
+	  <PackageReference Include="NSwag.Annotations" Version="14.0.7" />
 	  <PackageReference Include="NSwag.AspNet.Owin" Version="14.0.7" />
 	  <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
 	  <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
