更新了SdtdServerKit.csproj中的SQLite引用和文件复制指令
在`SdtdServerKit.csproj`中进行了以下主要更改：
1. 添加了新的包引用`SQLitePCLRaw.lib.e_sqlite3`，版本为`2.1.8`，并生成了路径属性。
2. 注释掉了从`SQLitePCLRaw.lib.e_sqlite3`包的`runtimes\linux-x64\native`目录中复制所有文件的`ItemGroup`。
3. 注释掉了在构建后复制文件到输出目录的`CopyFiles`目标。
4. 添加了一个新的`ItemGroup`，包含了一个指向`SQLitePCLRaw.lib.e_sqlite3`包的`runtimes\linux-x64\native\libe_sqlite3.so`文件的`None`项，该文件被设置为不可见，并在有新版本时复制到输出目录。

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -46,8 +46,20 @@
 	  <PackageReference Include="NSwag.Annotations" Version="14.0.7" />
 	  <PackageReference Include="NSwag.AspNet.Owin" Version="14.0.7" />
 	  <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="2.88.8" />
+	  <PackageReference Include="SQLitePCLRaw.lib.e_sqlite3" Version="2.1.8" GeneratePathProperty="true" />
 	  <PackageReference Include="System.Collections.Immutable" Version="8.0.0" />
 	  <PackageReference Include="System.Text.Encodings.Web" Version="8.0.0" />
+	</ItemGroup>
+
+	<!--<ItemGroup>
+		<FilesToCopy Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\linux-x64\native\*.*" />
+	</ItemGroup>
+	<Target Name="CopyFiles" AfterTargets="Build">
+		<Copy SourceFiles="@(FilesToCopy)" DestinationFolder="$(OutDir)\runtimes\linux-x64\native" SkipUnchangedFiles="true" />
+	</Target>-->
+	
+	<ItemGroup>
+		<None Include="$(PkgSQLitePCLRaw_lib_e_sqlite3)\runtimes\linux-x64\native\libe_sqlite3.so" Visible="false" CopyToOutputDirectory="PreserveNewest" />
 	</ItemGroup>
 
 	<ItemGroup>
