更新枚举值、添加新属性和方法，优化代码注释
在此次提交中，我们进行了以下主要更改：

- 在`EntityType.cs`中，修改了枚举值`OnlinePlayer`的默认值为1，并移除了`OfflinePlayer`。
- 在`AppSettings.cs`和`appsettings.json`中，添加了新的属性`FileBrowserPort`，用于设置文件浏览器的端口，并为每个属性添加了对应的注释。
- 在`FunctionBase.cs`中，注释掉了`OnEnableFunctionNonePlayer`方法，并在调用此方法的地方也进行了注释。
- 在`ModApi.cs`中，添加了新的命名空间`System.Net`，`System.Runtime.InteropServices`，`System.Diagnostics`和`System`，并添加了新的方法`LoadFileBrowser`，`SilentStartProcess`和`LoadFileBrowser`，用于加载文件浏览器。
- 在`SdtdServerKit.csproj`中，添加了新的文件夹`3rdparty-binaries\filebrowser\`，并设置了将此文件夹中的所有文件复制到输出目录。
- 添加了新的文件`ChildProcessTracker.cs`，用于跟踪子进程。如果父进程意外退出，跟踪的子进程将被自动杀死。
- 更新了LICENSE和README.md文件，添加了Apache License 2.0许可证和项目的logo、预览图、徽章等信息。
- 在`FileBrowserController.cs`文件中，注释掉了整个文件的内容。

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -147,8 +147,11 @@
 			<HintPath>..\7dtd-binaries\WebServer.dll</HintPath>
 		</Reference>
 	</ItemGroup>
-	
+
 	<ItemGroup>
-	  <Folder Include="ServerSettings\default\" />
+		<None Update=".\3rdparty-binaries\filebrowser\*">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
+
 </Project>
