--- a/src/SdtdServerKit/appsettings.json
+++ b/src/SdtdServerKit/appsettings.json
@@ -5,5 +5,6 @@
   "UserName": "admin",
   "Password": "123456",
   "AccessTokenExpireTime": 7200,
-  "DatabasePath": "./Data/database.db"
+  "DatabasePath": "./Data/database.db",
+  "FileBrowserPort": 8890
 }
