添加新的设置属性和自动重启功能
在本次提交中，我们进行了以下主要更改：

* 在`AppSettings.cs`和`appsettings.json`中添加了`FileBrowserUrl`属性，用于配置和存储文件浏览器的URL。
* 在`GlobalSettings.cs`中添加了`AutoRestart`类和相关属性，用于实现自动重启功能，包括设置重启时间和重启前的消息。
* 在`GlobalSettings.cs`中添加了`TeleZombieCheck`和`TeleDisableTip`属性，用于在传送前检查玩家周围是否有僵尸和显示禁止传送的提示。
* 在`en-us.json`和`zh-cn.json`中添加了对应的设置。
* 在`GlobalSettings.cs`中添加了`autoRestartTimer`定时器，并在构造函数中注册，用于执行自动重启操作。
* 在`TeleportCity.cs`、`TeleportFriend.cs`和`TeleportHome.cs`中添加了检查玩家周围是否有僵尸的逻辑。
* 在`Utils.cs`中添加了`ZombieCheck`方法，用于检查玩家周围是否有僵尸。

--- a/src/SdtdServerKit/appsettings.json
+++ b/src/SdtdServerKit/appsettings.json
@@ -6,5 +6,6 @@
   "Password": "123456",
   "AccessTokenExpireTime": 7200,
   "DatabasePath": "./Data/database.db",
-  "FileBrowserPort": 8890
+  "FileBrowserPort": 8890,
+  "FileBrowserUrl": "http://{hostname}:8890"
 }
