--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -4,7 +4,9 @@
 		<TargetFramework>net48</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PlatformTarget>x64</PlatformTarget>
+		<RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
+		<Platform>x64</Platform>
+		<OutputType>Library</OutputType>
 		<Authors>IceCoffee</Authors>
 		<Company>LuoShuiTianYi</Company>
 		<Copyright>Copyright (c) 2023 IceCoffee</Copyright>
