重大更新：配置、数据库和脚本调整
本次提交对项目进行了多方面的更新和优化，包括配置文件的处理、数据库结构的调整以及脚本执行逻辑的改进。主要更改如下：

- 在`AppSettings.cs`中添加了`ServerSettingsFileName`属性，用于指定服务器配置文件名。
- 更新了`RestartServer.cs`中的脚本执行逻辑，改进了Windows和Linux平台下的处理方式。
- `ConfigManager.cs`和`ModApi.cs`中的配置加载逻辑得到了优化，引入了`Microsoft.Extensions.Configuration`命名空间以更好地处理配置文件。
- `SdtdServerKit.csproj`中移除了一些文件的更新逻辑，并添加了新的包引用。
- 在多个配置文件和脚本中进行了调整，以适应上述更改。

这些更改旨在提高项目的可配置性、灵活性和性能，为未来的扩展打下坚实的基础。

--- a/src/SdtdServerKit/Config/appsettings.json
+++ b/src/SdtdServerKit/Config/appsettings.json
@@ -5,7 +5,8 @@
   "UserName": "admin",
   "Password": "123456",
   "AccessTokenExpireTime": 7200,
-  "DatabasePath": "./Data/database.db",
+  "DatabasePath": "LSTY_Data/database.db",
   "FileBrowserPort": 8890,
-  "FileBrowserUrl": "http://{hostname}:8890"
+  "FileBrowserUrl": "http://{hostname}:8890",
+  "ServerSettingsFileName": "serverconfig.xml"
 }
