--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -1,7 +1,7 @@
 {
   "GlobalSettings": {
     "ServerName": "[FF0000]Server[FFFFFF]",
-    "ChatCommandPrefix": "/",
+    "ChatCommandPrefix": "",
     "ChatCommandSeparator": "-",
     "HandleChatMessageError": "[FF0000]系统错误, 请联系服务器管理员",
     "TeleZombieCheck": true,
