更新积分系统和签到逻辑
对 PointsInfo.cs、数据库脚本、配置文件和控制器等多个文件进行了一系列重要的更改，主要集中在积分系统的更新上。这些更新包括对玩家签到逻辑的修改和数据库结构的调整，以提高系统的灵活性和准确性。

1. PointsInfo.cs 类的属性名称和类型更改，以更准确地记录签到信息。
2. 配置文件中签到间隔的配置项从天数更改为秒数，允许更精细的控制。
3. 新增数据库表 T_PointsInfo_v1 支持更新后的数据结构，并添加数据迁移脚本。
4. 更新 T_PointsInfo 类以映射到新的数据库表，并调整相关属性。
5. 移除了不再需要的 ResetLastSignInDaysAsync 方法。
6. 更新 PointsSystemSettings.cs 中的签到间隔配置项。
7. PointsSystem.cs 中签到逻辑的更新，使用新的字段和设置。
8. PointsInfoController.cs 更新以反映类和数据库结构的更改，移除了不适用的操作。

这些更改使得签到功能更加精确和用户友好。

--- a/src/SdtdServerKit/Config/functionsettings.en-us.json
+++ b/src/SdtdServerKit/Config/functionsettings.en-us.json
@@ -34,7 +34,7 @@
   "PointsSystemSettings": {
     "IsEnabled": false,
     "SignInCmd": "si",
-    "DaysBetweenSignIn": 1,
+    "SignInInterval": 3600,
     "SignInRewardPoints": 10,
     "SignInSuccessTip": "[00FF00]Sign in successful! Reward points: {SignInRewardPoints}, You currently have points: {PlayerTotalPoints}",
     "SignInFailureTip": "[FFFF00]Failed to sign in! Please come back later.",
