重构商品和事件枚举，优化逻辑处理
- `Goods.cs`文件中添加了`Id`和`Content`属性，用于表示商品ID和内容，同时对属性名称和类型进行了调整，增加了`ContentType`属性。
- 新增`ItemStack`类至`ItemBlock.cs`，包含物品的详细信息。
- 移除了`ModEventType.cs`中的枚举定义，并在`SdtdServerKit.Shared.Constants`下重新定义了`ModEventType`和`GoodsContentType`枚举。
- `ChangePlayerPoints.cs`和`RemovePlayerItems.cs`中修改了方法调用逻辑，增加了对操作结果的检查。
- 更新了`functionsettings.en-us.json`和`functionsettings.zh-cn.json`文件，改进了商品提示信息的格式。
- 数据库相关文件和代码更新，包括`4-Goods.sql`和`T_Goods.cs`，以匹配数据库表的更改。
- `GoodsRepository.cs`和`PointsInfoRepository.cs`中的方法实现进行了修改，优化了数据处理逻辑。
- `GameStore.cs`中商品购买逻辑根据商品内容类型进行了区分处理。
- 新增`GlobalUsings.cs`全局引用文件，简化了枚举和常量的引用。
- `Utils.cs`新增`GiveItem`方法，用于给玩家添加物品。
- `GameStoreVariables.cs`添加了`GoodsId`属性，用于支持游戏商店变量中的商品ID。
- `GoodsController.cs`中Web API的实现进行了修改，以适应商品模型的更改。
- 添加了新的枚举定义文件`GoodsContentTypes.cs`和`ModEventType.cs`，用于更清晰地表示商品内容类型和模块事件类型。

--- a/src/SdtdServerKit/Config/functionsettings.en-us.json
+++ b/src/SdtdServerKit/Config/functionsettings.en-us.json
@@ -45,7 +45,7 @@
     "IsEnabled": false,
     "QueryListCmd": "buy",
     "BuyCmdPrefix": "buy",
-    "GoodsItemTip": "{SerialNumber}. [00FF00]{GoodsName}[FFFFFF], [00FF00]Price: [FF00FF]{Price}",
+    "GoodsItemTip": "[FFFFFF]Input: [00FF00]buy-{GoodsId} [FFFFFF]buy [00FF00]{GoodsName}[FFFFFF], [00FF00]Price: [FF00FF]{Price}",
     "BuySuccessTip": "[00FF00]Purchase successful!",
     "PointsNotEnoughTip": "[00FF00]Not enough points, need points: {Price}",
     "NoGoods": "[00FF00]No goods."
