优化代码逻辑，更新路径引用，新增命令
- 在GameStore.cs中，增加了对命令字符串空检查的逻辑，以确保执行的命令有效。
- 更新了SdtdServerKit.csproj中的第三方库和游戏引擎DLL引用路径，改用直接的文件夹名称，提高了路径的兼容性。
- 在ReloadAllXmls.cs中新增了`ReloadAllXmls`命令类，允许通过`ty-ReloadAllXmls`命令同步重新加载所有XML文件，并在完成后记录日志，增强了游戏服务器的管理功能。

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -93,7 +93,7 @@
 		</Reference>
 		<Reference Include="websocket-sharp">
 			<Private>true</Private>
-			<HintPath>.\3rdparty-binaries\websocket-sharp.dll</HintPath>
+			<HintPath>3rdparty-binaries\websocket-sharp.dll</HintPath>
 		</Reference>
 		<None Include="$(SystemRoot)\Microsoft.NET\Framework64\v$(MSBuildRuntimeVersion)\System.Runtime.InteropServices.RuntimeInformation.dll">
 			<Visible>false</Visible>
@@ -104,11 +104,11 @@
 	<ItemGroup>
 		<Reference Include="Assembly-CSharp">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\Assembly-CSharp.dll</HintPath>
+			<HintPath>7dtd-binaries\Assembly-CSharp.dll</HintPath>
 		</Reference>
 		<Reference Include="Assembly-CSharp-firstpass">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\Assembly-CSharp-firstpass.dll</HintPath>
+			<HintPath>7dtd-binaries\Assembly-CSharp-firstpass.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.CoreModule">
 			<Private>false</Private>
@@ -116,23 +116,23 @@
 		</Reference>
 		<Reference Include="LogLibrary">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\LogLibrary.dll</HintPath>
+			<HintPath>7dtd-binaries\LogLibrary.dll</HintPath>
 		</Reference>
 		<Reference Include="0Harmony">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\0Harmony.dll</HintPath>
+			<HintPath>7dtd-binaries\0Harmony.dll</HintPath>
 		</Reference>
 		<Reference Include="Noemax.GZip">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\Noemax.GZip.dll</HintPath>
+			<HintPath>7dtd-binaries\Noemax.GZip.dll</HintPath>
 		</Reference>
 		<Reference Include="MapRendering">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\MapRendering.dll</HintPath>
+			<HintPath>7dtd-binaries\MapRendering.dll</HintPath>
 		</Reference>
 		<Reference Include="WebServer">
 			<Private>false</Private>
-			<HintPath>..\7dtd-binaries\WebServer.dll</HintPath>
+			<HintPath>7dtd-binaries\WebServer.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 </Project>
