新增和优化了多个功能和API接口
在本次提交中，我们引入了多项重要的代码变更和功能优化。首先，`GameTime.cs`文件中新增了`GameTime`类的构造函数，以提供更灵活的时间初始化方式，并对现有构造函数进行了注释处理。`ResetPlayer.cs`文件中，我们移除了不必要的引用，并在玩家重置逻辑中加入了垃圾回收和内存池清理操作，优化了内存管理。

此外，我们在`functionsettings.zh-cn.json`中添加了新的`AutoBackupSettings`配置项，允许用户自定义自动备份的行为，增强了备份功能的灵活性和可用性。`PointsSystem.cs`和`FunctionManager.cs`中的修改分别改进了时间间隔的计算逻辑和功能实例的获取方式，提升了系统的效率和易用性。

在API接口方面，我们移除了多个不再使用的控制器文件，简化了项目结构，并引入了`AutoBackup`相关的类和控制器，为自动备份功能提供了完整的支持。同时，新增了`TeleportFriendSettingsController`和`TeleportHomeSettingsController`控制器类，通过Web API增强了好友传送和私人回城配置的管理能力。

这些变更不仅涉及到功能的添加和优化，还包括了代码质量的提升和API接口的调整，旨在为用户提供更稳定、高效和易用的系统。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -93,5 +93,13 @@
     "CoolingTip": "[00FF00]传送冷却... 剩余时间: {CooldownSeconds} 秒",
     "TelePointsNotEnoughTip": "[00FF00]积分不够! 需要积分: 2",
     "TeleSuccessTip": "[00FF00]玩家: {PlayerName}, 传送到了自己的家: {HomeName}"
+  },
+  "AutoBackupSettings": {
+    "IsEnabled": false,
+    "Interval": 7200,
+    "RetainedFileCountLimit": 12,
+    "ResetIntervalAfterManualBackup": true,
+    "SkipIfThereAreNoPlayers": true,
+    "ArchiveFolder": "LSTY_Data/Backup"
   }
 }
