新增游戏币兑换积分功能
- 更新了功能设置文件`functionsettings.zh-cn.json`，移除了旧的查询积分提示并新增了与游戏币兑换积分相关的设置项。
- 在`PlayerDataFileExtension.cs`中新增了`GetInventoryStackCount`方法，用于获取玩家背包和装备栏中特定物品的总数量。
- `PointsSystemSettings.cs`和`PointsSystem.cs`均新增了与游戏币兑换积分功能相关的属性和逻辑处理，包括兑换命令的处理和兑换成功/失败的提示。
- `Utils.cs`新增了`GetPlayerInventoryStackCount`方法，用于获取指定玩家背包中特定物品的数量。
- `PointsSystemVariables.cs`新增了`CurrencyAmount`属性，用于在发送兑换成功提示时包含消耗的游戏币数量。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -39,7 +39,12 @@
     "SignInSuccessTip": "[00FF00]签到成功! 奖励积分: {SignInRewardPoints}, 您目前有积分: {PlayerTotalPoints}",
     "SignInFailureTip": "[FFFF00]签到失败! 请稍后再来吧",
     "QueryPointsCmd": "jf",
-    "QueryPointsTip": "[00FF00]您目前有积分: {PlayerTotalPoints}"
+    "QueryPointsTip": "[00FF00]您目前有积分: {PlayerTotalPoints}",
+    "IsCurrencyExchangeEnabled": false,
+    "CurrencyToPointsExchangeRate": 1.0,
+    "CurrencyExchangeCmd": "dh",
+    "ExchangeSuccessTip": "[00FF00]兑换成功! 消耗游戏币: {CurrencyAmount}, 您目前有积分: {PlayerTotalPoints}",
+    "ExchangeFailureTip": "[FFFF00]兑换失败! 请准备好公爵赌场币或签到后再来吧"
   },
   "GameStoreSettings": {
     "IsEnabled": false,
