新增配置项以控制POI中的睡袋
新增了一个配置项 `"RemoveSleepingBagFromPOI": false`，允许控制是否在兴趣点(POI)中移除睡袋。此功能的实现涉及多个文件的更新，包括功能设置文件、全局设置类、功能基类、配置管理器、模块API以及新增的移除POI中睡袋的补丁类。主要更改如下：

1. 在 `functionsettings.zh-cn.json` 中增加了新的配置项，用于控制是否在POI中移除睡袋。
2. `GlobalSettings.cs` 添加了 `RemoveSleepingBagFromPOI` 属性和 `OnSettingsChanged` 方法，用于根据配置应用或移除相关补丁。
3. `FunctionBase.cs` 更新了 `LoadSettings` 方法，确保设置变更后即时调用 `OnSettingsChanged` 方法。
4. `ConfigManager.cs` 修改了设置变更通知逻辑，现在所有类型的设置变更都会触发 `SettingsChanged` 事件。
5. `ModApi.cs` 调整了 `PatchByHarmony` 方法的调用位置，并添加了 `Harmony` 公共属性。
6. 新增 `RemoveSleepingBagFromPOI.cs` 类，通过Harmony补丁的方式实现在POI中移除睡袋的功能。

这些更改为服务器管理员提供了更多的游戏自定义选项，同时通过Harmony补丁保持了对原有代码的最小侵入性。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -20,7 +20,8 @@
       "RestartMinute": 0,
       "Messages": [ "[00FF00]服务器将在 3 秒后重启...", "[00FF00]服务器将在 2 秒后重启...", "[00FF00]服务器将在 1 秒后重启...", "[FF0000]正在重启..." ]
     },
-    "BlockFamilySharingAccount": true
+    "BlockFamilySharingAccount": true,
+    "RemoveSleepingBagFromPOI": false
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
