代码优化与功能调整
- 移除了`Common.cs`中的`DefaultServerName`常量定义。
- `GiveItem.cs`中物品品质解析方式更新为`ushort.TryParse`。
- 移除`GlobalMessage.cs`中使用默认服务器名称发送全局消息的功能。
- `SayToPlayer.cs`和`GlobalMessage.cs`中消息发送方式改为`EMessageSender.Server`枚举。
- `functionsettings.en-us.json`和`functionsettings.zh-cn.json`中注释掉`ServerName`设置。
- `GlobalSettings.cs`中注释掉`ServerName`属性定义。
- `FunctionBase.cs`中发送消息时不再使用`ServerName`作为发送者名称。
- `RemoveSleepingBagFromPOI.cs`添加Harmony补丁，移除POI内土地认领标记和睡袋。
- `ChatMessageHook.cs`和`ModEventHook.cs`中注释掉使用`ServerName`作为消息发送者名称的代码。
- `WorldStaticDataHook.cs`方法名`ReplaceXmlsToImplRemovePlayerItems`更改为`ReplaceXmls`。
- `ModApi.cs`中添加插件目录存在性检查。
- `ItemBlocksController.cs`优化物品和方块检索逻辑。
- 对多个文件进行代码格式化和清理。

--- a/src/SdtdServerKit/Config/serversettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/serversettings.zh-cn.json
@@ -362,5 +362,9 @@
   "TwitchBloodMoonAllowed": {
     "Group": "其他",
     "Desc": "是否允许 Twitch 血月。如果服务器允许在血月期间进行Twitch操作, 可能会在血月期间产生额外的僵尸, 从而导致服务器滞后"
+  },
+  "QuestProgressionDailyLimit": {
+    "Group": "其他",
+    "Desc": "每日任务进度限制。限制玩家每天可完成的有助于任务等级提升的任务数量。超过限制的任务仍可完成以获得奖励"
   }
 }
