--- a/src/SdtdServerKit/Config/functionsettings.en-us.json
+++ b/src/SdtdServerKit/Config/functionsettings.en-us.json
@@ -1,6 +1,6 @@
 {
   "GlobalSettings": {
-    "ServerName": "[FF0000]Server[FFFFFF]",
+    //"ServerName": "[FF0000]Server[FFFFFF]",
     "ChatCommandPrefix": "/",
     "ChatCommandSeparator": "-",
     "HandleChatMessageError": "[FF0000]System error, please contact the server administrator.",
