--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -1,6 +1,6 @@
 {
   "GlobalSettings": {
-    "ServerName": "[FF0000]Server[FFFFFF]",
+    //"ServerName": "[FF0000]Server[FFFFFF]",
     "ChatCommandPrefix": "",
     "ChatCommandSeparator": "-",
     "HandleChatMessageError": "[FF0000]系统错误, 请联系服务器管理员",
