新增VIP礼包功能及相关配置
- 在`functionsettings.zh-cn.json`中新增`VipGiftSettings`配置项，用于管理VIP礼包功能的启用状态、领取命令等。
- 更新了`ICommandListRepository.cs`和`IItemListRepository.cs`接口，添加了获取VIP礼包命令清单和物品清单的方法。
- 在`CommandListRepository.cs`和`ItemListRepository.cs`中实现了新的接口方法，支持根据VIP礼包Id获取命令和物品清单。
- 创建了`VipGift.cs`实体类及`T_VipGift`、`T_VipGiftItem`和`T_VipGiftCommand`数据库表，定义了VIP礼包的基本信息和存储结构。
- 新增了`IVipGiftRepository.cs`、`IVipGiftCommandRepository.cs`和`IVipGiftItemRepository.cs`接口及其实现类，提供VIP礼包、礼包命令和礼包物品的数据访问逻辑。
- 实现了VIP礼包的业务逻辑，并通过`VipGiftController.cs`和`VipGiftSettingsController.cs`提供了API接口，支持礼包数据操作和配置管理。
- 添加了`VipGiftVariables.cs`辅助类，定义了处理VIP礼包时使用的变量。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -107,5 +107,12 @@
     "ResetIntervalAfterManualBackup": true,
     "SkipIfThereAreNoPlayers": true,
     "ArchiveFolder": "LSTY_Data/Backup"
+  },
+  "VipGiftSettings": {
+    "IsEnabled": false,
+    "ClaimCmd": "VIP",
+    "HasClaimedTip": "[00FF00]您已经领取过礼包了~",
+    "NonVipTip": "[00FF00]您还不是VIP哦~",
+    "ClaimSuccessTip": "[00FF00]恭喜您成功领取了礼包: {GiftName}"
   }
 }
