优化家的传送提示和逻辑
移除了家位置的序号系统，改进了传送提示的格式。在`functionsettings.zh-cn.json`中更新了`LocationItemTip`的值，使其更加明确地指导玩家如何传送到设置的家。`TeleportHome.cs`中的逻辑更新，不再生成或使用家的位置序号，直接使用家名称进行传送提示。相应地，`FormatCmd`方法的签名中移除了`serialNumber`参数，`TeleportHomeVariables.cs`中也移除了不再需要的`SerialNumber`属性。这些更改旨在简化传送到家的指令，提高用户体验。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -89,7 +89,7 @@
     "TeleHomeCmdPrefix": "home",
     "PointsRequiredForTele": 2,
     "NoHomeTip": "[00FF00]您尚未设置过家, 请输入 /setHome 设置",
-    "LocationItemTip": "{SerialNumber}. [00FF00]<[FF0000]{HomeName}[00FF00]>",
+    "LocationItemTip": "[FFFFFF]输入: [00FF00]home-{HomeName} [FFFFFF]传送到[FF0000]{HomeName}[00FF00]",
     "OverLimitTip": "[00FF00]超过最大设置数, 您最多可设置3个家",
     "SetPointsNotEnoughTip": "[00FF00]积分不够! 需要积分: 2",
     "SetSuccessTip": "[00FF00]设置成功",
