添加新配置项和功能，优化代码并处理异常
主要更改：
* 在 `functionsettings.zh-cn.json` 文件中：
  * 添加 `IsEnablePlayerInitialSpawnPoint`、`PlayerInitialPosition` 和 `AutoBackupOnServerStartup` 配置项。
* 在 `AutoBackupSettings.cs` 文件中：
  * 添加 `AutoBackupOnServerStartup` 属性。
* 在 `GlobalSettings.cs` 文件中：
  * 添加 `IsEnablePlayerInitialSpawnPoint` 和 `PlayerInitialPosition` 属性。
* 在 `AutoBackup.cs` 文件中：
  * 添加 `OnGameStartDone` 方法，用于服务器启动时自动备份。
  * 在 `ExecuteInternal` 方法中添加异常处理。
* 在 `GameNotice.cs` 文件中：
  * 在发送血月通知前添加空字符串检查。
* 在 `SdtdServerKit.csproj` 文件中：
  * 更新 `IceCoffee.SimpleCRUD` 包版本至 `1.3.12`。
* 在 `CommandListController.cs` 和 `ItemListController.cs` 文件中：
  * 插入记录后返回插入的记录ID。
* 在 `PlayerDataFilePatcher.cs` 文件中：
  * 使用 Harmony 库对 `PlayerDataFile` 类进行补丁，添加 `ToPlayer` 方法的后置补丁，以设置玩家初始出生点。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -21,7 +21,9 @@
       "Messages": [ "[00FF00]服务器将在 3 秒后重启...", "[00FF00]服务器将在 2 秒后重启...", "[00FF00]服务器将在 1 秒后重启...", "[FF0000]正在重启..." ]
     },
     "BlockFamilySharingAccount": true,
-    "RemoveSleepingBagFromPOI": false
+    "RemoveSleepingBagFromPOI": false,
+    "IsEnablePlayerInitialSpawnPoint": false,
+    "PlayerInitialPosition": null
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
@@ -106,6 +108,7 @@
     "RetainedFileCountLimit": 12,
     "ResetIntervalAfterManualBackup": true,
     "SkipIfThereAreNoPlayers": true,
+    "AutoBackupOnServerStartup": true,
     "ArchiveFolder": "LSTY_Data/Backup"
   },
   "VipGiftSettings": {
