更新多文件以改进功能和修复问题
在 `functionsettings.zh-cn.json` 文件中，修改了 `LocationItemTip` 的提示信息，将 `tele-{CityId}` 改为 `hc-{CityId}`。

在 `AutoBackup.cs` 和 `GameNotice.cs` 文件中，添加了 `using SdtdServerKit.Managers;` 引用，并在相关方法中增加了 `OnlinePlayerManager.Count == 0` 的判断条件。

在 `OnlinePlayerManager.cs` 文件中，修改了 `GetAll` 方法的格式，并添加了 `Count` 属性，用于获取在线玩家数量。

在 `OnlinePlayer.cs` 文件中，添加了 `_entityPlayer` 字段，并在构造函数中初始化。修改了 `ClientInfo` 属性，去掉了可空类型，并修改了 `EntityPlayer` 属性，改为直接返回 `_entityPlayer` 字段。添加了 `GameStage` 属性，用于获取玩家的游戏阶段。

在 `PlayerDetails.cs` 文件中，删除了 `GameStageBornAtWorldTime` 属性，修改了 `Progression` 属性的实现，优先从 `EntityPlayer` 获取数据，并添加了 `IsAdmin` 属性，用于获取玩家的管理员状态。

在 `Stats.cs` 和 `ServerController.cs` 文件中，添加了 `Region` 和 `Language` 属性及其获取逻辑。

--- a/src/SdtdServerKit/Config/functionsettings.zh-cn.json
+++ b/src/SdtdServerKit/Config/functionsettings.zh-cn.json
@@ -63,7 +63,7 @@
     "QueryListCmd": "hc",
     "TeleCmdPrefix": "hc",
     "TeleInterval": 60,
-    "LocationItemTip": "[FFFFFF]输入: [00FF00]tele-{CityId} [FFFFFF]传送到 [00FF00]{CityName}[FFFFFF], 需要积分: [FF00FF]{PointsRequired}",
+    "LocationItemTip": "[FFFFFF]输入: [00FF00]hc-{CityId} [FFFFFF]传送到 [00FF00]{CityName}[FFFFFF], 需要积分: [FF00FF]{PointsRequired}",
     "TeleSuccessTip": "[00FF00]玩家: {PlayerName}, 传送到了: {CityName}",
     "PointsNotEnoughTip": "[00FF00]积分不足, 需要积分: {PointsRequired}",
     "CoolingTip": "[00FF00]传送冷却... 剩余时间: {CooldownSeconds} 秒",
