--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -131,5 +131,9 @@
 			<Private>false</Private>
 			<HintPath>7dtd-binaries\WebServer.dll</HintPath>
 		</Reference>
+		<Reference Include="com.rlabrecque.steamworks.net">
+			<Private>false</Private>
+			<HintPath>7dtd-binaries\com.rlabrecque.steamworks.net.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 </Project>
