重构玩家详情和本地化，新增技能和图标控制器
重构 `PlayerDetails` 类，移除 `PlayerProgression` 类并整合其属性。
删除 `PlayerProgression.cs` 文件。
在 `SdtdServerKit.csproj` 中添加 `Assets` 文件夹复制配置。
在 `Utils.cs` 和 `LocalizationController.cs` 中，`GetLocalization` 方法增加 `caseInsensitive` 参数。
修改 `ItemIconsController.cs` 中图标路径。
更新 `PlayersController.cs` 中排序逻辑。
在 `7DTD_Assets_Sprites.txt` 中添加知识产权许可说明。
新增 `PlayerSkill` 和 `PlayerSkillsController` 类。
新增 `UiIconsController` 类，支持根据颜色生成图标。

--- a/src/SdtdServerKit/SdtdServerKit.csproj
+++ b/src/SdtdServerKit/SdtdServerKit.csproj
@@ -73,6 +73,9 @@
 		<None Update="Config\**">
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
+		<None Update="Assets\**">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 
 	<ItemGroup>
