重构配置管理和多语言支持
删除了 `functionsettings.en-us.json` 和 `functionsettings.zh-cn.json` 文件中的所有设置项，并新增了 `functionsettings.en.json` 和 `functionsettings.zh.json` 文件，分别包含了英文和中文的默认配置。

删除了 `serversettings.zh-cn.json` 文件中的所有服务器设置条目，并在 `serversettings.zh.json` 文件中添加了详细的服务器配置项，涵盖了服务器的基本信息、网络设置、插槽设置、管理界面设置、文件位置设置、反作弊设置、游戏世界设置、游戏难度设置、性能相关设置、僵尸设置、战利品设置、多玩家设置、领地石选项、动态网格系统设置、Twitch 集成设置和每日任务进度限制等。

删除了 `Cultures.cs` 文件中的 `Cultures` 结构体及其内容，并在 `Locales.cs` 文件中新增了 `SdtdServerKit.Constants` 命名空间，定义了 `Locales` 结构体，包含英语、简体中文和繁体中文的常量字符串，以及两个 `Get` 方法，用于根据语言枚举或字符串获取相应的语言代码。

在 `FunctionBase.cs` 文件中，修改了 `Settings` 属性的访问方式，增加了空值检查，并在 `_settings` 为空时抛出异常；修改了 `LoadSettings` 方法，增加了对 `_settings` 为空的检查，只有在 `_settings` 不为空时才会继续执行后续操作。

在 `GlobalSettings.cs` 文件中，新增了 `Settings` 属性，直接从 `ConfigManager.GlobalSettings` 获取全局设置。

在 `ConfigManager.cs` 中，移除了 `Autofac` 的引用，添加了 `SdtdServerKit.Data.IRepositories`、`System.Text` 和 `SdtdServerKit.Data.Entities` 的引用；修改了 `GlobalSettings` 的获取方式，增加了对 `GetRequired<GlobalSettings>` 方法的调用，以根据语言加载配置；修改了 `Get<TSettings>` 方法，移除了 `culture` 参数，并在未找到配置时返回 `default`；新增了 `GetRequired<TSettings>` 方法，用于在未找到配置时加载默认配置；修改了 `LoadDefault<TSettings>` 方法，将 `culture` 参数改为 `locale`。

在 `AutoBackupController.cs` 中，修改了获取 `AutoBackupSettings` 的方式，改为通过 `FunctionManager` 获取。

在 `ServerController.cs` 中，修改了 `Settings` 方法，将 `culture` 参数改为 `Language` 类型，并根据语言加载配置文件。

在多个 `SettingsController` 中，修改了获取和重置配置的方法，增加了 `Language` 参数，并使用 `GetRequired<TSettings>` 和 `LoadDefault<TSettings>` 方法根据语言加载配置。

--- a/src/SdtdServerKit/Config/functionsettings.en.json
+++ b/src/SdtdServerKit/Config/functionsettings.en.json
@@ -1,7 +1,6 @@
 {
   "GlobalSettings": {
-    //"ServerName": "[FF0000]Server[FFFFFF]",
-    "ChatCommandPrefix": "/",
+    "ChatCommandPrefix": "",
     "ChatCommandSeparator": "-",
     "HandleChatMessageError": "[FF0000]System error, please contact the server administrator.",
     "TeleZombieCheck": true,
@@ -20,7 +19,10 @@
       "RestartMinute": 0,
       "Messages": [ "[00FF00]The server will reboot in 3 seconds...", "[00FF00]The server will reboot in 2 seconds...", "[00FF00]The server will reboot in 1 second...", "[FF0000]Restarting..." ]
     },
-    "BlockFamilySharingAccount": true
+    "BlockFamilySharingAccount": true,
+    "RemoveSleepingBagFromPOI": false,
+    "IsEnablePlayerInitialSpawnPoint": false,
+    "PlayerInitialPosition": null
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
@@ -39,7 +41,12 @@
     "SignInSuccessTip": "[00FF00]Sign in successful! Reward points: {SignInRewardPoints}, You currently have points: {PlayerTotalPoints}",
     "SignInFailureTip": "[FFFF00]Failed to sign in! Please come back later.",
     "QueryPointsCmd": "points",
-    "QueryPointsTip": "[00FF00]You currently have points: {PlayerTotalPoints}"
+    "QueryPointsTip": "[00FF00]You currently have points: {PlayerTotalPoints}",
+    "IsCurrencyExchangeEnabled": false,
+    "CurrencyToPointsExchangeRate": 1.0,
+    "CurrencyExchangeCmd": "dh",
+    "ExchangeSuccessTip": "[00FF00]Exchange successful! Game currency consumed: {CurrencyAmount}, you currently have points",
+    "ExchangeFailureTip": "[FFFF00]Exchange failed! Please prepare Duke Casino coins or sign in before coming back"
   },
   "GameStoreSettings": {
     "IsEnabled": false,
@@ -55,11 +62,11 @@
     "QueryListCmd": "city",
     "TeleCmdPrefix": "city",
     "TeleInterval": 60,
-    "LocationItemTip": "{SerialNumber}. [00FF00]{CityName}[FFFFFF], Points required: [FF00FF]{PointsRequired}",
+    "LocationItemTip": "[FFFFFF]Input: [00FF00]hc-{CityId} [FFFFFF]Teleport to [00FF00]{CityName}[FFFFFF], Points Required: [FF00FF]{PointsRequired}",
     "TeleSuccessTip": "[00FF00]Player: {PlayerName}, teleported to: {CityName}",
     "PointsNotEnoughTip": "[00FF00]Not enough points, need points: {PointsRequired}",
     "CoolingTip": "[00FF00]Teleport cooling... Remaining time: {CooldownSeconds} seconds.",
-    "NoLocation": "[00FF00]No location."
+    "NoLocation": "[00FF00]There is no city location."
   },
   "TeleportFriendSettings": {
     "IsEnabled": false,
@@ -83,7 +90,7 @@
     "TeleHomeCmdPrefix": "home",
     "PointsRequiredForTele": 2,
     "NoHomeTip": "[00FF00]You haven't set a home yet, please use /setHome to set one.",
-    "LocationItemTip": "{SerialNumber}. [00FF00]<[FF0000]{HomeName}[00FF00]>",
+    "LocationItemTip": "[FFFFFF]Input: [00FF00]home-{HomeName} [FFFFFF]Transfer to [FF0000]{HomeName}[00FF00]",
     "OverLimitTip": "[00FF00]Exceeded the maximum number of set homes. You can set up to 3 homes.",
     "SetPointsNotEnoughTip": "[00FF00]Points Not enough, Points required: 2",
     "SetSuccessTip": "[00FF00]Successfully set.",
@@ -93,5 +100,21 @@
     "CoolingTip": "[00FF00]Teleport cooling... Remaining time: {CooldownSeconds} seconds.",
     "TelePointsNotEnoughTip": "[00FF00]Insufficient points! Points required: 2",
     "TeleSuccessTip": "[00FF00]Player: {PlayerName} teleported to their home: {HomeName}"
+  },
+  "AutoBackupSettings": {
+    "IsEnabled": false,
+    "Interval": 7200,
+    "RetainedFileCountLimit": 12,
+    "ResetIntervalAfterManualBackup": true,
+    "SkipIfThereAreNoPlayers": true,
+    "AutoBackupOnServerStartup": true,
+    "ArchiveFolder": "LSTY_Data/Backup"
+  },
+  "VipGiftSettings": {
+    "IsEnabled": false,
+    "ClaimCmd": "VIP",
+    "HasClaimedTip": "[00FF00]You have received the gift package~",
+    "NonVipTip": "[00FF00]You are not a VIP yet~",
+    "ClaimSuccessTip": "[00FF00]Congratulations on successfully receiving the gift package: {GiftName}"
   }
 }
