添加多语言支持和服务器设置优化
在 `functionsettings.en.json` 文件中，更新了 `ExchangeSuccessTip` 的提示信息，增加了玩家当前积分的显示。

在 `Locales.cs` 文件中：
  * 添加了对 `IceCoffee.Common.Extensions` 的引用。
  * 修改了 `EnUs` 常量的名称为 `EN`。
  * 添加了多个语言常量，包括德语（`DE`）、西班牙语（`ES`）、法语（`FR`）、意大利语（`IT`）、日语（`JA`）、韩语（`KO`）、波兰语（`PL`）、葡萄牙语（`PT`）、俄语（`RU`）、土耳其语（`TR`）、简体中文（`ZH`）和繁体中文（`TW`）。
  * 更新了 `Get(Language language)` 方法，支持新添加的语言常量。
  * 更新了 `Get(string language)` 方法，使用 `Enum.TryParse` 方法解析语言字符串，并调用 `Get(Language language)` 方法获取对应的语言常量。

添加了多个语言的 `functionsettings` 文件，包含全局设置、游戏通知设置、积分系统设置、游戏商店设置、城市传送设置、好友传送设置、家传送设置、自动备份设置和 VIP 礼物设置的翻译。

在 `serversettings` 文件中添加了新的服务器配置选项，支持多语言描述，包括德语、西班牙语、法语、意大利语、日语、波兰语和土耳其语。

这些更改旨在提升用户体验，提供更多的配置选项，并确保翻译的准确性。

--- a/src/SdtdServerKit/Config/functionsettings.en.json
+++ b/src/SdtdServerKit/Config/functionsettings.en.json
@@ -45,7 +45,7 @@
     "IsCurrencyExchangeEnabled": false,
     "CurrencyToPointsExchangeRate": 1.0,
     "CurrencyExchangeCmd": "dh",
-    "ExchangeSuccessTip": "[00FF00]Exchange successful! Game currency consumed: {CurrencyAmount}, you currently have points",
+    "ExchangeSuccessTip": "[00FF00]Exchange successful! Game currency consumed: {CurrencyAmount}, you currently have points: {PlayerTotalPoints}",
     "ExchangeFailureTip": "[FFFF00]Exchange failed! Please prepare Duke Casino coins or sign in before coming back"
   },
   "GameStoreSettings": {
