--- a/src/SdtdServerKit/Config/functionsettings.es.json
+++ b/src/SdtdServerKit/Config/functionsettings.es.json
@@ -2,7 +2,7 @@
   "GlobalSettings": {
     "ChatCommandPrefix": "",
     "ChatCommandSeparator": "-",
-    "HandleChatMessageError": "[FF0000]Error del sistema, por favor contacta al administrador del servidor.",
+    "HandleChatMessageError": "[FF0000]Error del sistema, por favor contacta con el administrador del servidor.",
     "TeleZombieCheck": true,
     "TeleDisableTip": "[00FF00]La transmisión está prohibida. Por favor verifica si tu entorno es seguro.",
     "KillZombieTrigger": {
@@ -26,27 +26,27 @@
   },
   "GameNoticeSettings": {
     "IsEnabled": false,
-    "WelcomeNotice": "Bienvenido, sobreviviente.",
+    "WelcomeNotice": "Bienvenido, superviviente.",
     "RotatingNotices": [],
     "RotatingInterval": 300,
     "BloodMoonNotice1": "La próxima luna de sangre será en {BloodMoonDays} días.",
     "BloodMoonNotice2": "La próxima luna de sangre será hoy. Comenzará a las {BloodMoonStartTime}",
-    "BloodMoonNotice3": "La luna de sangre ya está aquí, espera hasta {BloodMoonEndTime}"
+    "BloodMoonNotice3": "La luna de sangre ya está aquí, espera hasta las {BloodMoonEndTime}"
   },
   "PointsSystemSettings": {
     "IsEnabled": false,
-    "SignInCmd": "si",
+    "SignInCmd": "is",
     "SignInInterval": 3600,
     "SignInRewardPoints": 10,
-    "SignInSuccessTip": "[00FF00]¡Inicio de sesión exitoso! Puntos de recompensa: {SignInRewardPoints}, Actualmente tienes puntos: {PlayerTotalPoints}",
-    "SignInFailureTip": "[FFFF00]¡Error al iniciar sesión! Vuelve más tarde.",
+    "SignInSuccessTip": "[00FF00]¡Inicio de sesión exitoso! Puntos de recompensa: {SignInRewardPoints}, Actualmente tienes un total de {PlayerTotalPoints} puntos:",
+    "SignInFailureTip": "[FFFF00]¡Error al iniciar sesión! Inténtalo más tarde.",
     "QueryPointsCmd": "puntos",
-    "QueryPointsTip": "[00FF00]Actualmente tienes puntos: {PlayerTotalPoints}",
+    "QueryPointsTip": "[00FF00]Actualmente tienes {PlayerTotalPoints} puntos:",
     "IsCurrencyExchangeEnabled": false,
     "CurrencyToPointsExchangeRate": 1.0,
     "CurrencyExchangeCmd": "dh",
-    "ExchangeSuccessTip": "[00FF00]¡Intercambio exitoso! Moneda del juego consumida: {CurrencyAmount}, actualmente tienes puntos: {PlayerTotalPoints}",
-    "ExchangeFailureTip": "[FFFF00]¡Intercambio fallido! Prepara las monedas de Duke Casino o inicia sesión antes de volver"
+    "ExchangeSuccessTip": "[00FF00]¡Intercambio exitoso! Monedas usadas: {CurrencyAmount}, actualmente tienes {PlayerTotalPoints} puntos:",
+    "ExchangeFailureTip": "[FFFF00]¡Intercambio fallido! Prepara las monedas Duke o inicia sesión antes de volver"
   },
   "GameStoreSettings": {
     "IsEnabled": false,
@@ -55,7 +55,7 @@
     "GoodsItemTip": "[FFFFFF]Entrada: [00FF00]comprar-{GoodsId} [FFFFFF]comprar [00FF00]{GoodsName}[FFFFFF], [00FF00]Precio: [FF00FF]{Precio}",
     "BuySuccessTip": "[00FF00]¡Compra exitosa!",
     "PointsNotEnoughTip": "[00FF00]No hay suficientes puntos, se necesitan puntos: {Price}",
-    "NoGoods": "[00FF00]No hay bienes"
+    "NoGoods": "[00FF00]No hay objetos"
   },
   "TeleportCitySettings": {
     "IsEnabled": false,
@@ -64,7 +64,7 @@
     "TeleInterval": 60,
     "LocationItemTip": "[FFFFFF]Entrada: [00FF00]hc-{CityId} [FFFFFF]Teletransportarse a [00FF00]{CityName}[FFFFFF], Puntos necesarios: [FF00FF]{PointsRequired}",
     "TeleSuccessTip": "[00FF00]Jugador: {PlayerName}, teletransportado a: {CityName}",
-    "PointsNotEnoughTip": "[00FF00]No hay suficientes puntos, se necesitan puntos: {PointsRequired}",
+    "PointsNotEnoughTip": "[00FF00]No hay suficientes puntos, se necesitan {PointsRequired} puntos:",
     "CoolingTip": "[00FF00]Teletransportarse enfriándose... Tiempo restante: {CooldownSeconds} segundos.",
     "NoLocation": "[00FF00]No hay ninguna ubicación de ciudad."
   },
@@ -76,23 +76,23 @@
     "TeleSuccessTip": "[00FF00] Jugador: {PlayerName}, Teletransportado a: {TargetName}",
     "PointsNotEnoughTip": "[00FF00]Puntos insuficientes, Puntos necesarios: {PointsRequired}",
     "CoolingTip": "[00FF00]Teletransportación enfriándose... Tiempo restante: {CooldownSeconds} segundos.",
-    "TargetNotFoundTip": "[FF00FF]Objetivo de teletransportación no encontrado, ingresa: [00FF00]/nombre del amigo de teletransportación [FFFFFF]para teletransportarte.",
+    "TargetNotFoundTip": "[FF00FF]Objetivo de teletransporte no encontrado, ingresa: [00FF00]/nombre del amigo al que te quieres teletransportar [FFFFFF]para teletransportarte.",
     "TargetNotFriendTip": "[00FF00]El objetivo no es tu amigo."
 
   },
   "TeleportHomeSettings": {
     "IsEnabled": false,
-    "QueryListCmd": "home",
+    "QueryListCmd": "casa",
     "TeleInterval": 60,
-    "SetHomeCmdPrefix": "setHome",
+    "SetHomeCmdPrefix": "setCasa",
     "SetCountLimit": 3,
     "PointsRequiredForSet": 2,
-    "DeleteHomeCmdPrefix": "delHome",
+    "DeleteHomeCmdPrefix": "delCasa",
     "TeleHomeCmdPrefix": "home",
     "PointsRequiredForTele": 2,
-    "NoHomeTip": "[00FF00]Aún no has configurado una casa, usa /setHome para configurar una.",
-    "LocationItemTip": "[FFFFFF]Entrada: [00FF00]home-{HomeName} [FFFFFF]Transferir a [FF0000]{HomeName}[00FF00]",
-    "OverLimitTip": "[00FF00]Se superó la cantidad máxima de casas configuradas. Puedes configurar hasta 3 casas.",
+    "NoHomeTip": "[00FF00]Aún no has configurado una casa, usa /setCasa para configurar una.",
+    "LocationItemTip": "[FFFFFF]Entrada: [00FF00]casa-{HomeName} [FFFFFF]Transferir a [FF0000]{HomeName}[00FF00]",
+    "OverLimitTip": "[00FF00]Se superó la cantidad máxima de casas configuradas. Puedes configurar hasta un máximo de 3 casas.",
     "SetPointsNotEnoughTip": "[00FF00]Puntos insuficientes, puntos necesarios: 2",
     "SetSuccessTip": "[00FF00]Configuración correcta.",
     "OverwriteSuccessTip": "[00FF00]Se sobrescribieron correctamente las coordenadas anteriores.",
@@ -100,7 +100,7 @@
     "HomeNotFoundTip": "[00FF00]No se encontró la casa especificada.",
     "CoolingTip": "[00FF00]Enfriamiento de teletransporte... Tiempo restante: {CooldownSeconds} segundos.",
     "TelePointsNotEnoughTip": "[00FF00]¡Puntos insuficientes! Puntos necesarios: 2",
-    "TeleSuccessTip": "[00FF00]Jugador: {PlayerName} se teletransportó a su casa: {HomeName}"
+    "TeleSuccessTip": "[00FF00]Jugador: {PlayerName} se teletransportó a tu casa: {HomeName}"
   },
   "AutoBackupSettings": {
     "IsEnabled": false,
@@ -114,8 +114,8 @@
   "VipGiftSettings": {
     "IsEnabled": false,
     "ClaimCmd": "VIP",
-    "HasClaimedTip": "[00FF00]Has recibido el regalo paquete~",
+    "HasClaimedTip": "[00FF00]Has recibido el regalo paquete VIP~",
     "NonVipTip": "[00FF00]Aún no eres un VIP~",
-    "ClaimSuccessTip": "[00FF00]Felicitaciones por recibir exitosamente el paquete de regalo: {GiftName}"
+    "ClaimSuccessTip": "[00FF00]Felicidades por recibir el paquete de regalo VIP: {GiftName}"
   }
 }
